{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 31,
  "lineage": "d48b99e8-0c3c-bb10-6766-302fb0dd58f6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "portfolio_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5673b5f6e8f7fa7",
            "arn": "arn:aws:ec2:eu-central-1:471112875749:instance/i-0315a32a35009eba3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0315a32a35009eba3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyAWSKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02009435fbf4d5ae4",
            "private_dns": "ip-10-0-1-108.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.108",
            "public_dns": "ec2-3-70-53-131.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.70.53.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08fdb38effe787b15",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0412af66ebcd9c421",
            "tags": {
              "Name": "Portfolio-EC2"
            },
            "tags_all": {
              "Name": "Portfolio-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eac1d057b562d75c"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated",
            "aws_security_group.portfolio_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.portfolio_vpc",
            "tls_private_key.generated"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:471112875749:internet-gateway/igw-0523a64ceb5f8f51d",
            "id": "igw-0523a64ceb5f8f51d",
            "owner_id": "471112875749",
            "tags": {
              "Name": "Portfolio-IGW"
            },
            "tags_all": {
              "Name": "Portfolio-IGW"
            },
            "vpc_id": "vpc-0c1ece9e15a4a8253"
          },
          "dependencies": [
            "aws_vpc.portfolio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:471112875749:route-table/rtb-0e8c611afbb70d429",
            "id": "rtb-0e8c611afbb70d429",
            "owner_id": "471112875749",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0523a64ceb5f8f51d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Portfolio-Public-Route-Table"
            },
            "tags_all": {
              "Name": "Portfolio-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1ece9e15a4a8253"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.portfolio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f7f2ca478fd955d",
            "route_table_id": "rtb-0e8c611afbb70d429",
            "subnet_id": "subnet-0412af66ebcd9c421"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.portfolio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "portfolio_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:471112875749:security-group/sg-0eac1d057b562d75c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eac1d057b562d75c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241214030918485700000001",
            "name_prefix": "terraform-",
            "owner_id": "471112875749",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Portfolio-SG"
            },
            "tags_all": {
              "Name": "Portfolio-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1ece9e15a4a8253"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.portfolio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:471112875749:subnet/subnet-0412af66ebcd9c421",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0412af66ebcd9c421",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112875749",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Portfolio-Public-Subnet"
            },
            "tags_all": {
              "Name": "Portfolio-Public-Subnet"
            },
            "vpc_id": "vpc-0c1ece9e15a4a8253"
          },
          "dependencies": [
            "aws_vpc.portfolio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "portfolio_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:471112875749:vpc/vpc-0c1ece9e15a4a8253",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c2e132e9faadcf16",
            "default_route_table_id": "rtb-02efc1f7083e1db2d",
            "default_security_group_id": "sg-0f2cc3eddf7e920fb",
            "dhcp_options_id": "dopt-00aa821e097346f68",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c1ece9e15a4a8253",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02efc1f7083e1db2d",
            "owner_id": "471112875749",
            "tags": {
              "Name": "Portfolio-VPC"
            },
            "tags_all": {
              "Name": "Portfolio-VPC"
            }
          }
        }
      ]
    }
  ]
}